examples/test/testpolicy5231.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5231
  namespace: namespace116
spec:
  podSelector:
    matchLabels:
      key40: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value2
          key32: value20
          key40: value36
      podSelector:
        matchLabels:
          key0: value6
